--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
    	  	 	   <p style="margin: 12px 0px;color: #ffffff;font-size: 14px">
                 <span><i class="fas fa-envelope"  style="font-size: 16px;"></i></span> message@yourcompany.com
    	  	 	   </p>
-   	  	 	   <p style="margin: 12px 0px;color: #ffffff;font-size: 14px">
-                <span><i class="fas fa-mobile-alt" style="font-size: 20px;"></i></span> 01024131582
+   	  	 	   <p style="margin: 12px 0px;color: #FFF!important;text-decoration: none!important;font-size: 14px">
+                <span><i class="fas fa-mobile-alt" style="font-size: 20px; "></i></span> 01024131582
    	  	 	   </p>
 
    	  	 	   <p style="margin: 12px 0px;color: #ffffff;font-size: 14px">
